sandbox/output
QualityAndSellInCalculator.java:73: error: ')' expected
        updateQualityBeforeDecreasingSellIn(Item item);
                                                ^
QualityAndSellInCalculator.java:73: error: illegal start of expression
        updateQualityBeforeDecreasingSellIn(Item item);
                                                     ^
QualityAndSellInCalculator.java:74: error: ')' expected
        decreaseSellIn(Item item);
                           ^
QualityAndSellInCalculator.java:74: error: illegal start of expression
        decreaseSellIn(Item item);
                                ^
QualityAndSellInCalculator.java:75: error: ')' expected
        updateQualityAfterDecreasingSellIn(Item item);
                                               ^
QualityAndSellInCalculator.java:75: error: illegal start of expression
        updateQualityAfterDecreasingSellIn(Item item);
                                                    ^
6 errors
Error: Could not find or load main class TexttestFixture
